--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^5.7.0",
+    "node": "^18.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
