--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   "dependencies": {
     "gatsby": "^5.7.0",
     "gatsby-plugin-manifest": "^5.8.0",
+    "gatsby-plugin-postcss": "^6.10.0",
     "node": "^18.15.0",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.3.2"
   }
 }
